# MultiGenius

./: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
docs/: V3.0原型验收报告.md  V3.0需求补充与原型建议.md  前端设计文档.md  需求理解报告.md  需求理解报告_儿童乘法APP.md
docs/calicat_data/: PRD全文_儿童乘法APP.md  原型页面文案汇总.md
src/: App.tsx  main.tsx  router.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs
src/components/: AudioButton.css  AudioButton.tsx  Badge.css  Badge.tsx  BottomNav.css  BottomNav.tsx  Card.css  Card.tsx  NumberPad.css  NumberPad.tsx  ProgressBar.css  ProgressBar.tsx  ProgressRing.css  ProgressRing.tsx  Slider.css  Slider.tsx  Stars.css  Stars.tsx  Toggle.css  Toggle.tsx
src/pages/advanced/: AppDifficulty.tsx  AppQuiz.css  AppQuiz.tsx  DifficultySelect.tsx  FreePractice.tsx  TimedChallenge.tsx
src/pages/common/: Placeholder.tsx  SplashPage.tsx
src/pages/enlighten/: CoverRecite.tsx  EntryPractice.tsx  FollowRecite.tsx  ReciteGame.tsx  ReciteHome.tsx  VisualTeach.tsx
src/pages/home/: HomePage.css  HomePage.tsx  HomeTabletPage.tsx
src/pages/profile/: AccountSwitch.css  AccountSwitch.tsx  CustomQuiz.tsx  DailyCheckin.tsx  DataExport.tsx  EyeCare.tsx  ProfilePage.tsx  QuizTablet.tsx  ReciteTablet.tsx  ReportPage.tsx  TimeControl.tsx
src/pages/wrong/: ResultPage.tsx  WrongBook.css  (+4 more)
src/services/: bridge.ts
src/store/: useChildStore.ts  usePracticeStore.ts  useSettingsStore.ts
src/theme/: global.css  tokens.css
src/types/: models.ts
